--- a/docs/SmiscOverview.Rmd
+++ b/docs/SmiscOverview.Rmd
@@ -411,7 +411,7 @@ A call to `r rdl("rma()")` removes all the objects in the Global Environment.
 There are a number of packages out there that enable parallelization of R.  The parallelization functions in the `Smisc` package are not meant to replace them, but rather, make them easier to use---especially for Windows users. For the most part, I rely on the [parallel](https://stat.ethz.ch/R-manual/R-devel/library/parallel/doc/parallel.pdf) package for parallelization.  These functions are designed to run on a single, multi-core workstation (as opposed to a cluster with multiple nodes).
 
 ## Parallelize lapply(), a wrapper for parLapply()
-`r rdl("parLapplyW()")` parallelizes [lapply()](http://www.inside-r.org/r-doc/base/lapply), and is a wrapper for [parLapply()](http://www.inside-r.org/r-doc/parallel/parLapply). `r rdl("parLapplyW()")` makes makes it easy to start the cluster, prepare the workers by exporting variables and/or evaluating expressions, running the [lapply()](http://www.inside-r.org/r-doc/base/lapply) in parallel, and then shutting down the cluster---all in one function call.  If the job fails, the cluster is shut down without consequence.  
+`r rdl("parLapplyW()")` parallelizes [lapply()](http://www.inside-r.org/r-doc/base/lapply), and is a wrapper for [parLapply()](http://www.inside-r.org/r-doc/parallel/parLapply). `r rdl("parLapplyW()")` makes makes it easy to start the cluster, prepare the workers by exporting variables and/or evaluating expressions, run the [lapply()](http://www.inside-r.org/r-doc/base/lapply) in parallel, and then shut down the cluster---all in one function call.  If the job fails, the cluster is shut down without consequence.  
 
 Let's look at two workflows that produce the same result, one using the individual functions of the [parallel](https://stat.ethz.ch/R-manual/R-devel/library/parallel/doc/parallel.pdf) package, and the second using `r rdl("parLapplyW()")`.  Here are some preliminary objects that both workflows will need:
 ```{r parLapplyW1, eval = TRUE, echo = TRUE}
@@ -455,7 +455,7 @@ identical(res1, res2)
 ```
 
 ## Parallelize lapply() with convenient debugging and more
-Like `r rdl("parLapplyW()")`, `r rdl("plapply()")` is also a parallelization of [lapply()](http://www.inside-r.org/r-doc/base/lapply) for a single workstation. `r rdl("plapply()")` differs from other parallelized implementations of [lapply()](http://www.inside-r.org/r-doc/base/lapply) in that it more intensively reads and writes to disk to manage the parallelization process. It spawns a separate batch instance of R for each parallel job, with each instance producing its own `.Rout` file that can be investigated for errors and warnings. While `r rdl("plapply()")` will be a bit slower than other parallel methods (especially for small jobs) because of the i/o to disk, it contains a number of features that are not readily available in other parallelization functions:
+`r rdl("plapply()")`, like `r rdl("parLapplyW()")`, is also a parallelization of [lapply()](http://www.inside-r.org/r-doc/base/lapply) for a single workstation. `r rdl("plapply()")` differs from other parallelized implementations of [lapply()](http://www.inside-r.org/r-doc/base/lapply) in that it more intensively reads and writes to disk to manage the parallelization process. It spawns a separate batch instance of R for each parallel job, with each instance producing its own `.Rout` file that can be investigated for errors and warnings. While `r rdl("plapply()")` will be a bit slower than other parallel methods (especially for small jobs) because of the i/o to disk, it contains a number of features that are not readily available in other parallelization functions:
 
 -  The `.Rout` files produced by each R instance are easily accessible for convenient debugging of errors or warnings. The `.Rout` files can also serve as an explicit record of the work that was performed by the workers
 - Three options are available for the ordering of the processing of the list elements: the original list order, randomized, or collated (first-in-first-out)
