--- a/rd.Rmd
+++ b/rd.Rmd
@@ -3759,10 +3759,10 @@ to use, corresponding to the Gaussian kernel, exponential decay, linear
 decay, or uniform weights. Defaults to <code>gaussian</code>.</dd>
   <dt>furthest.weight</dt>
   <dd class="rd-dd">A single, positive number corresponding to the unormalized value of
-the weights at the left and right edges of the window</dd>
+the weights at the left and right edges of the window.  Ignored when <code>type = uniform</code>.</dd>
   <dt>center.weight</dt>
   <dd class="rd-dd">A single, positive number corresponding to the unnormalized value of
-the weights at the center of the window</dd>
+the weights at the center of the window.</dd>
   <dt>...</dt>
   <dd class="rd-dd">For <code>movAvg2</code>, these are additional arguments to <code><a href=#smartfilter>smartFilter</a></code>.
 For the <code>print</code> and <code>plot</code> methods, the "..." are additional arguments passed to
